finished desktop header

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        <div class="container">
+    <div class="header bg-red pd-y-3">
+        <div class="d-flex jcsb aic container">
             <h1>
-                <a href="index.html">hex glasses</a>
+                <a class="logo" href="index.html">hex glasses</a>
             </h1>
-            <ul class="menu">
-                <li><a href="#">系列鏡框</a></li>
-                <li><a href="#">門市據點</a></li>
-                <li><a href="#">部落格</a></li>
-                <li><a href="#">常見問題</a></li>
+            <ul class="menu d-flex jcsb aic">
+                <li><a class="fz-20 ft-wt" href="#">系列鏡框</a></li>
+                <li><a class="fz-20 ft-wt" href="#">門市據點</a></li>
+                <li><a class="fz-20 ft-wt" href="#">部落格</a></li>
+                <li><a class="fz-20 ft-wt" href="#">常見問題</a></li>
             </ul>
         </div>
     </div>
