--- a/index.html
+++ b/index.html
@@ -6,24 +6,68 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Roboto:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/all.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="header bg-red pd-y-3">
-        <div class="d-flex jcsb aic container">
+    <nav class="navbar bg-red">
+        <div class="container navbar-wrap">
             <h1>
-                <a class="logo" href="index.html">hex glasses</a>
+                <a class="navbar-logo" href="index.html">hex glasses</a>
             </h1>
-            <ul class="menu d-flex jcsb aic">
-                <li><a class="fz-20 ft-wt" href="#">系列鏡框</a></li>
-                <li><a class="fz-20 ft-wt" href="#">門市據點</a></li>
-                <li><a class="fz-20 ft-wt" href="#">部落格</a></li>
-                <li><a class="fz-20 ft-wt" href="#">常見問題</a></li>
+            <ul class="navbar-nav">
+                <li class="navbar-item"><a class="navbar-link fz-20 ft-wt" href="#">系列鏡框</a></li>
+                <li class="navbar-item"><a class="navbar-link fz-20 ft-wt" href="#">門市據點</a></li>
+                <li class="navbar-item"><a class="navbar-link fz-20 ft-wt w-12" href="#">部落格</a></li>
+                <li class="navbar-item"><a class="navbar-link fz-20 ft-wt" href="#">常見問題</a></li>
             </ul>
         </div>
+    </nav>
+    <div class="content"></div>
+    <div class="footer bg-red">
+        <div class="container">
+            <div class="footer-navwrap">
+                <div class="footer-navbar-nav">
+                    <ul class="footer-nav">
+                        <li><a class="ft-wt" href="#">首頁</a></li>
+                        <li><a class="ft-wt" href="#">系列鏡框</a></li>
+                        <li><a class="ft-wt" href="#">門市據點</a></li>
+                        <li><a class="ft-wt" href="#">部落格</a></li>
+                        <li><a class="ft-wt" href="#">常見問題</a></li>
+                    </ul>
+                    <ul class="footer-contact">
+                        <li class="mb-20">
+                            <a class="fz-36 ft-wt" href="tel:0800-000-000">
+                                <span class="fz-36  material-icons-outlined mr-22">phone</span>
+                                <span>0800-000-000</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="fz-36 ft-wt" href="mailto:glasses@business.com">
+                                <span class="fz-36 material-icons-outlined mr-22">email</span>
+                                <span>glasses@business.com</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="footer-socialLink">
+                    <li><a href="#"><img src="image/ic-social-fb.png" alt="facebook-icon"></a></li>
+                    <li><a href="#"><img src="image/ic_social_ig.png" alt="instagram-icon"></a></li>
+                    <li><a href="#"><img src="image/ic_social_line.png" alt="line-icon"></a></li>
+                </ul>
+            </div>
+            <div class="footer-policywrap">
+                <div class="copyright ft-wt">
+                Copyright © 2020 Glasses.All rights reserved.
+                </div>
+                <ul class="policy-item">
+                    <li><a class="fz-14 ft-wt" href="#">隱私權政策</a></li>
+                    <li><a class="fz-14 ft-wt" href="#">服務條款</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="footer"></div>
 </body>
 </html>
