--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                         <li><a class="ft-wt" href="#">常見問題</a></li>
                     </ul>
                     <ul class="footer-contact">
-                        <li class="mb-20">
-                            <a class="fz-36 ft-wt" href="tel:0800-000-000">
-                                <span class="fz-36  material-icons-outlined mr-22">phone</span>
-                                <span>0800-000-000</span>
+                        <li class="mb-2">
+                            <a href="tel:0800-000-000">
+                                <span class="fz-36 ft-wt material-icons-outlined mr-4">phone</span>
+                                <span class="fz-36 ft-wt" >0800-000-000</span>
                             </a>
                         </li>
                         <li>
-                            <a class="fz-36 ft-wt" href="mailto:glasses@business.com">
-                                <span class="fz-36 material-icons-outlined mr-22">email</span>
-                                <span>glasses@business.com</span>
+                            <a href="mailto:glasses@business.com">
+                                <span class="fz-36 ft-wt material-icons-outlined mr-4">email</span>
+                                <span class="fz-36 ft-wt">glasses@business.com</span>
                             </a>
                         </li>
                     </ul>
